--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -21,7 +21,7 @@
                     <span style="--index: 10;">c</span>
                     <span style="--index: 11;">h</span>
                 </h1>
-                <p>Wizja przyszłości, inteligentne przewidywanie zdarzeń maszyn</p>
+                <p>Machine learning, intelligent prediction of machine events</p>
             </div>
         </div>
     </main>
