--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -42,18 +42,18 @@
                     <div class="value">12.5 kWh<i class="fa-solid fa-bolt"></i></div>
                 </div>
             </div>
+
+            <div class="meter-container">
+                <div class="meter">
+                    <div class="meter-value" id="meter-value"></div>
+                    <div class="label" id="meter-label">0%</div>
+                </div>
+            </div>
+
             <div class="chartsbox">
                 <div class="chart-container">
                     <canvas id="lineChart1"></canvas>
                 </div>
-            
-                <!-- <div class="chart-container">
-                    <canvas id="lineChart2"></canvas>
-                </div>
-            
-                <div class="chart-container">
-                    <canvas id="lineChart3"></canvas>
-                </div> -->
             <script src='js/chart.js'></script>
         </div>
     </main>
