--- a/public/css/moje.css
+++ b/public/css/moje.css
@@ -280,13 +280,48 @@ body {
   }
 }
 
+.meter-container {
+  width: 100%;
+}
+
+.meter {
+  padding: auto;
+  margin: 0 50px 40px 50px;
+  height: 35px;
+  width: auto;
+  background: linear-gradient(to right, #f17aff, red, orange, yellow, #27c3ff);
+  border-radius: 15px;
+  position: relative;
+  border: 1px solid white;
+}
+
+.meter-value {
+  position: absolute;
+  height: 100%;
+  width: 0;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 15px 0 0 15px;
+  transition: width 0.3s ease-in-out;
+}
+
+.label {
+  position: absolute;
+  top: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: black;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
 .chartsbox{
   display: flex;
   margin-left: 20px;
+  margin-right: 20px;
   text-align: center;
   justify-content: center;
   align-items: center;
-  width: 77%;
+  width: auto;
   border-radius: 5px;
   border: 1px solid white;
   box-shadow: 0 0 7px #666565;
