--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -21,22 +21,22 @@
                   </script>
             </div>
             <div class="info-boxes">
-//                <div class="box1">
-//                    <p>Jobs Completed/Hour</p>
-//                    <div class="value">03<i class="fa-solid fa-square-check"></i></div>
-//                </div>
-//                <div class="box2">
-//                    <p>Cycle Time</p>
-//                    <div class="value">1 hr 22 min<i class="fa-solid fa-clock"></i></div>
-//                </div>
-//                <div class="box3">
-//                    <p>Overall Equipment Efficiency</p>
-//                    <div class="value">80%<i class="fa-solid fa-gauge-simple-high"></i></div>
-//                </div>
-//                <div class="box4">
-//                    <p>Operating Efficiency</p>
-//                    <div class="value">75%<i class="fa-solid fa-gauge-simple-high"></i></div>
-//                </div>
+                <div class="box1">
+                    <p>Jobs Completed/Hour</p>
+                    <div class="value">03<i class="fa-solid fa-square-check"></i></div>
+                </div>
+                <div class="box2">
+                    <p>Cycle Time</p>
+                    <div class="value">1 hr 22 min<i class="fa-solid fa-clock"></i></div>
+                </div>
+                <div class="box3">
+                    <p>Overall Equipment Efficiency</p>
+                    <div class="value">80%<i class="fa-solid fa-gauge-simple-high"></i></div>
+                </div>
+                <div class="box4">
+                    <p>Operating Efficiency</p>
+                    <div class="value">75%<i class="fa-solid fa-gauge-simple-high"></i></div>
+                </div>
                 <div class="box5">
                     <p>Energy Consumption</p>
                     <div class="value">12.5 kWh<i class="fa-solid fa-bolt"></i></div>
